added cc api page

--- a/src/CoreWeatherGrpc.Blazor/Shared/NavMenu.razor
+++ b/src/CoreWeatherGrpc.Blazor/Shared/NavMenu.razor
@@ -18,8 +18,8 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="currentconditionsapicall">
+                <span class="oi oi-list-rich" aria-hidden="true"></span>CC Api Call 
             </NavLink>
         </li>
     </ul>
