--- a/src/CoreWeatherGrpc.Blazor/Shared/NavMenu.razor
+++ b/src/CoreWeatherGrpc.Blazor/Shared/NavMenu.razor
@@ -22,6 +22,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span>CC Api Call 
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="CurrentConditionsServiceCall">
+                <span class="oi oi-list-rich" aria-hidden="true"></span>CC Srvc Call 
+            </NavLink>
+        </li>
     </ul>
 </div>
 
