--- a/src/CoreWeatherGrpc.Blazor/Shared/NavMenu.razor
+++ b/src/CoreWeatherGrpc.Blazor/Shared/NavMenu.razor
@@ -27,6 +27,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span>CC Srvc Call 
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="CurrentConditionsStreamCall">
+                <span class="oi oi-list-rich" aria-hidden="true"></span>CC Stream Call 
+            </NavLink>
+        </li>
     </ul>
 </div>
 
